// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HomePage > Features Section > should match snapshot for individual feature cards > calendar-integration-card 1`] = `
<div
  class="glass-effect rounded-xl p-8 text-center fade-in"
>
  <div
    class="w-16 h-16 blue-gradient rounded-lg mx-auto mb-4 flex items-center justify-center"
  >
    <svg
      class="w-8 h-8 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M8 7V3a2 2 0 012-2h4a2 2 0 012 2v4m-6 0h6m-6 0l-2 7h10l-2-7m-6 0V3"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
  <h3
    class="text-xl font-semibold text-gray-900 mb-3"
  >
    Google Calendar Integration
  </h3>
  <p
    class="text-gray-600"
  >
    Seamlessly connects with your Google Calendar to find available times and automatically create meetings with all the details.
  </p>
</div>
`;

exports[`HomePage > Features Section > should match snapshot for individual feature cards > contact-management-card 1`] = `
<div
  class="glass-effect rounded-xl p-8 text-center fade-in"
>
  <div
    class="w-16 h-16 blue-gradient rounded-lg mx-auto mb-4 flex items-center justify-center"
  >
    <svg
      class="w-8 h-8 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
  <h3
    class="text-xl font-semibold text-gray-900 mb-3"
  >
    Smart Contact Management
  </h3>
  <p
    class="text-gray-600"
  >
    Integrates with your Google Contacts to easily invite participants and manage meeting attendees with intelligent suggestions.
  </p>
</div>
`;

exports[`HomePage > Features Section > should match snapshot for individual feature cards > natural-conversation-card 1`] = `
<div
  class="glass-effect rounded-xl p-8 text-center fade-in"
>
  <div
    class="w-16 h-16 blue-gradient rounded-lg mx-auto mb-4 flex items-center justify-center"
  >
    <svg
      class="w-8 h-8 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 4v-4z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
  <h3
    class="text-xl font-semibold text-gray-900 mb-3"
  >
    Natural Conversation
  </h3>
  <p
    class="text-gray-600"
  >
    Just tell MeetingMuse what you need. No complex forms or rigid interfaces - chat naturally about your meeting requirements.
  </p>
</div>
`;

exports[`HomePage > How It Works Section > should match snapshot for how it works section > how-it-works-section 1`] = `
<div
  class="text-center mb-16"
>
  <h3
    class="text-3xl font-bold text-gray-900 mb-12"
  >
    How MeetingMuse Works
  </h3>
  <div
    class="grid md:grid-cols-3 gap-8"
  >
    <div
      class="slide-up"
    >
      <div
        class="w-12 h-12 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center"
      >
        <span
          class="text-blue-600 font-bold text-lg"
        >
          1
        </span>
      </div>
      <h4
        class="text-lg font-semibold text-gray-900 mb-2"
      >
        Describe Your Meeting
      </h4>
      <p
        class="text-gray-600"
      >
        Tell MeetingMuse about your meeting needs in plain English
      </p>
    </div>
    <div
      class="slide-up"
    >
      <div
        class="w-12 h-12 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center"
      >
        <span
          class="text-blue-600 font-bold text-lg"
        >
          2
        </span>
      </div>
      <h4
        class="text-lg font-semibold text-gray-900 mb-2"
      >
        AI Understands & Plans
      </h4>
      <p
        class="text-gray-600"
      >
        Our AI analyzes your request and finds optimal meeting times
      </p>
    </div>
    <div
      class="slide-up"
    >
      <div
        class="w-12 h-12 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center"
      >
        <span
          class="text-blue-600 font-bold text-lg"
        >
          3
        </span>
      </div>
      <h4
        class="text-lg font-semibold text-gray-900 mb-2"
      >
        Meeting Scheduled
      </h4>
      <p
        class="text-gray-600"
      >
        Calendar events are created automatically with invites sent
      </p>
    </div>
  </div>
</div>
`;

exports[`HomePage > Snapshots > should match snapshot for footer section 1`] = `
<footer
  class="bg-gray-900 text-white"
>
  <div
    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12"
  >
    <div
      class="grid md:grid-cols-4 gap-8"
    >
      <div
        class="md:col-span-2"
      >
        <div
          class="flex items-center space-x-3 mb-4"
        >
          <div
            class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center"
          >
            <svg
              class="w-4 h-4 text-white"
              fill="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h4l4 4 4-4h4c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"
              />
            </svg>
          </div>
          <h3
            class="text-xl font-bold"
          >
            MeetingMuse
          </h3>
        </div>
        <p
          class="text-gray-400 mb-4"
        >
          Your intelligent meeting scheduling assistant. Powered by AI to make scheduling effortless and efficient.
        </p>
      </div>
      <div>
        <h4
          class="text-lg font-semibold mb-4"
        >
          Features
        </h4>
        <ul
          class="space-y-2 text-gray-400"
        >
          <li>
            Calendar Integration
          </li>
        </ul>
      </div>
      <div>
        <h4
          class="text-lg font-semibold mb-4"
        >
          Support
        </h4>
        <ul
          class="space-y-2 text-gray-400"
        >
          <li>
            Privacy Policy
          </li>
          <li>
            Terms of Service
          </li>
          <li>
            Contact Us
          </li>
        </ul>
      </div>
    </div>
    <div
      class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400"
    >
      <p>
        © 2024 MeetingMuse. All rights reserved.
      </p>
    </div>
  </div>
</footer>
`;

exports[`HomePage > Snapshots > should match snapshot for header section 1`] = `
<header
  class="blue-gradient shadow-lg"
>
  <div
    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
  >
    <div
      class="flex justify-between items-center py-6"
    >
      <div
        class="flex items-center space-x-4"
      >
        <div
          class="w-10 h-10 bg-white/20 backdrop-blur-sm rounded-lg flex items-center justify-center"
        >
          <svg
            class="w-5 h-5 text-white"
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h4l4 4 4-4h4c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"
            />
          </svg>
        </div>
        <div>
          <h1
            class="text-2xl font-bold text-white tracking-tight"
          >
            MeetingMuse
          </h1>
          <p
            class="text-blue-100 text-sm font-medium"
          >
            Your AI Meeting Assistant
          </p>
        </div>
      </div>
      <button
        class="px-6 py-3 bg-white/20 hover:bg-white/30 backdrop-blur-sm rounded-lg text-white font-semibold transition-all duration-200 border border-white/30"
      >
        Get Started
      </button>
    </div>
  </div>
</header>
`;

exports[`HomePage > Snapshots > should match snapshot for main content section 1`] = `
<main>
  <section
    class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20"
  >
    <div
      class="text-center mb-16"
    >
      <h2
        class="text-5xl font-bold text-gray-900 mb-6"
      >
        Schedule meetings with
        <span
          class="bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent"
        >
           AI intelligence
        </span>
      </h2>
      <p
        class="text-xl text-gray-600 max-w-3xl mx-auto mb-8"
      >
        Simply describe your meeting needs in natural language. MeetingMuse understands your requirements and handles the scheduling automatically.
      </p>
      <button
        class="px-8 py-4 blue-gradient text-white font-semibold rounded-lg shadow-lg hover:shadow-xl transition-all duration-200 transform hover:-translate-y-1"
      >
        Start Scheduling
      </button>
    </div>
    <div
      class="grid md:grid-cols-3 gap-8 mb-16"
    >
      <div
        class="glass-effect rounded-xl p-8 text-center fade-in"
      >
        <div
          class="w-16 h-16 blue-gradient rounded-lg mx-auto mb-4 flex items-center justify-center"
        >
          <svg
            class="w-8 h-8 text-white"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 4v-4z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <h3
          class="text-xl font-semibold text-gray-900 mb-3"
        >
          Natural Conversation
        </h3>
        <p
          class="text-gray-600"
        >
          Just tell MeetingMuse what you need. No complex forms or rigid interfaces - chat naturally about your meeting requirements.
        </p>
      </div>
      <div
        class="glass-effect rounded-xl p-8 text-center fade-in"
      >
        <div
          class="w-16 h-16 blue-gradient rounded-lg mx-auto mb-4 flex items-center justify-center"
        >
          <svg
            class="w-8 h-8 text-white"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 7V3a2 2 0 012-2h4a2 2 0 012 2v4m-6 0h6m-6 0l-2 7h10l-2-7m-6 0V3"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <h3
          class="text-xl font-semibold text-gray-900 mb-3"
        >
          Google Calendar Integration
        </h3>
        <p
          class="text-gray-600"
        >
          Seamlessly connects with your Google Calendar to find available times and automatically create meetings with all the details.
        </p>
      </div>
      <div
        class="glass-effect rounded-xl p-8 text-center fade-in"
      >
        <div
          class="w-16 h-16 blue-gradient rounded-lg mx-auto mb-4 flex items-center justify-center"
        >
          <svg
            class="w-8 h-8 text-white"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <h3
          class="text-xl font-semibold text-gray-900 mb-3"
        >
          Smart Contact Management
        </h3>
        <p
          class="text-gray-600"
        >
          Integrates with your Google Contacts to easily invite participants and manage meeting attendees with intelligent suggestions.
        </p>
      </div>
    </div>
    <div
      class="text-center mb-16"
    >
      <h3
        class="text-3xl font-bold text-gray-900 mb-12"
      >
        How MeetingMuse Works
      </h3>
      <div
        class="grid md:grid-cols-3 gap-8"
      >
        <div
          class="slide-up"
        >
          <div
            class="w-12 h-12 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center"
          >
            <span
              class="text-blue-600 font-bold text-lg"
            >
              1
            </span>
          </div>
          <h4
            class="text-lg font-semibold text-gray-900 mb-2"
          >
            Describe Your Meeting
          </h4>
          <p
            class="text-gray-600"
          >
            Tell MeetingMuse about your meeting needs in plain English
          </p>
        </div>
        <div
          class="slide-up"
        >
          <div
            class="w-12 h-12 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center"
          >
            <span
              class="text-blue-600 font-bold text-lg"
            >
              2
            </span>
          </div>
          <h4
            class="text-lg font-semibold text-gray-900 mb-2"
          >
            AI Understands & Plans
          </h4>
          <p
            class="text-gray-600"
          >
            Our AI analyzes your request and finds optimal meeting times
          </p>
        </div>
        <div
          class="slide-up"
        >
          <div
            class="w-12 h-12 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center"
          >
            <span
              class="text-blue-600 font-bold text-lg"
            >
              3
            </span>
          </div>
          <h4
            class="text-lg font-semibold text-gray-900 mb-2"
          >
            Meeting Scheduled
          </h4>
          <p
            class="text-gray-600"
          >
            Calendar events are created automatically with invites sent
          </p>
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`HomePage > Snapshots > should render the complete homepage correctly 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-blue-50 via-white to-purple-50"
>
  <header
    class="blue-gradient shadow-lg"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
    >
      <div
        class="flex justify-between items-center py-6"
      >
        <div
          class="flex items-center space-x-4"
        >
          <div
            class="w-10 h-10 bg-white/20 backdrop-blur-sm rounded-lg flex items-center justify-center"
          >
            <svg
              class="w-5 h-5 text-white"
              fill="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h4l4 4 4-4h4c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"
              />
            </svg>
          </div>
          <div>
            <h1
              class="text-2xl font-bold text-white tracking-tight"
            >
              MeetingMuse
            </h1>
            <p
              class="text-blue-100 text-sm font-medium"
            >
              Your AI Meeting Assistant
            </p>
          </div>
        </div>
        <button
          class="px-6 py-3 bg-white/20 hover:bg-white/30 backdrop-blur-sm rounded-lg text-white font-semibold transition-all duration-200 border border-white/30"
        >
          Get Started
        </button>
      </div>
    </div>
  </header>
  <main>
    <section
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20"
    >
      <div
        class="text-center mb-16"
      >
        <h2
          class="text-5xl font-bold text-gray-900 mb-6"
        >
          Schedule meetings with
          <span
            class="bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent"
          >
             AI intelligence
          </span>
        </h2>
        <p
          class="text-xl text-gray-600 max-w-3xl mx-auto mb-8"
        >
          Simply describe your meeting needs in natural language. MeetingMuse understands your requirements and handles the scheduling automatically.
        </p>
        <button
          class="px-8 py-4 blue-gradient text-white font-semibold rounded-lg shadow-lg hover:shadow-xl transition-all duration-200 transform hover:-translate-y-1"
        >
          Start Scheduling
        </button>
      </div>
      <div
        class="grid md:grid-cols-3 gap-8 mb-16"
      >
        <div
          class="glass-effect rounded-xl p-8 text-center fade-in"
        >
          <div
            class="w-16 h-16 blue-gradient rounded-lg mx-auto mb-4 flex items-center justify-center"
          >
            <svg
              class="w-8 h-8 text-white"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 4v-4z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h3
            class="text-xl font-semibold text-gray-900 mb-3"
          >
            Natural Conversation
          </h3>
          <p
            class="text-gray-600"
          >
            Just tell MeetingMuse what you need. No complex forms or rigid interfaces - chat naturally about your meeting requirements.
          </p>
        </div>
        <div
          class="glass-effect rounded-xl p-8 text-center fade-in"
        >
          <div
            class="w-16 h-16 blue-gradient rounded-lg mx-auto mb-4 flex items-center justify-center"
          >
            <svg
              class="w-8 h-8 text-white"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M8 7V3a2 2 0 012-2h4a2 2 0 012 2v4m-6 0h6m-6 0l-2 7h10l-2-7m-6 0V3"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h3
            class="text-xl font-semibold text-gray-900 mb-3"
          >
            Google Calendar Integration
          </h3>
          <p
            class="text-gray-600"
          >
            Seamlessly connects with your Google Calendar to find available times and automatically create meetings with all the details.
          </p>
        </div>
        <div
          class="glass-effect rounded-xl p-8 text-center fade-in"
        >
          <div
            class="w-16 h-16 blue-gradient rounded-lg mx-auto mb-4 flex items-center justify-center"
          >
            <svg
              class="w-8 h-8 text-white"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <h3
            class="text-xl font-semibold text-gray-900 mb-3"
          >
            Smart Contact Management
          </h3>
          <p
            class="text-gray-600"
          >
            Integrates with your Google Contacts to easily invite participants and manage meeting attendees with intelligent suggestions.
          </p>
        </div>
      </div>
      <div
        class="text-center mb-16"
      >
        <h3
          class="text-3xl font-bold text-gray-900 mb-12"
        >
          How MeetingMuse Works
        </h3>
        <div
          class="grid md:grid-cols-3 gap-8"
        >
          <div
            class="slide-up"
          >
            <div
              class="w-12 h-12 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center"
            >
              <span
                class="text-blue-600 font-bold text-lg"
              >
                1
              </span>
            </div>
            <h4
              class="text-lg font-semibold text-gray-900 mb-2"
            >
              Describe Your Meeting
            </h4>
            <p
              class="text-gray-600"
            >
              Tell MeetingMuse about your meeting needs in plain English
            </p>
          </div>
          <div
            class="slide-up"
          >
            <div
              class="w-12 h-12 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center"
            >
              <span
                class="text-blue-600 font-bold text-lg"
              >
                2
              </span>
            </div>
            <h4
              class="text-lg font-semibold text-gray-900 mb-2"
            >
              AI Understands & Plans
            </h4>
            <p
              class="text-gray-600"
            >
              Our AI analyzes your request and finds optimal meeting times
            </p>
          </div>
          <div
            class="slide-up"
          >
            <div
              class="w-12 h-12 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center"
            >
              <span
                class="text-blue-600 font-bold text-lg"
              >
                3
              </span>
            </div>
            <h4
              class="text-lg font-semibold text-gray-900 mb-2"
            >
              Meeting Scheduled
            </h4>
            <p
              class="text-gray-600"
            >
              Calendar events are created automatically with invites sent
            </p>
          </div>
        </div>
      </div>
    </section>
  </main>
  <footer
    class="bg-gray-900 text-white"
  >
    <div
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12"
    >
      <div
        class="grid md:grid-cols-4 gap-8"
      >
        <div
          class="md:col-span-2"
        >
          <div
            class="flex items-center space-x-3 mb-4"
          >
            <div
              class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h4l4 4 4-4h4c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-2 12H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z"
                />
              </svg>
            </div>
            <h3
              class="text-xl font-bold"
            >
              MeetingMuse
            </h3>
          </div>
          <p
            class="text-gray-400 mb-4"
          >
            Your intelligent meeting scheduling assistant. Powered by AI to make scheduling effortless and efficient.
          </p>
        </div>
        <div>
          <h4
            class="text-lg font-semibold mb-4"
          >
            Features
          </h4>
          <ul
            class="space-y-2 text-gray-400"
          >
            <li>
              Calendar Integration
            </li>
          </ul>
        </div>
        <div>
          <h4
            class="text-lg font-semibold mb-4"
          >
            Support
          </h4>
          <ul
            class="space-y-2 text-gray-400"
          >
            <li>
              Privacy Policy
            </li>
            <li>
              Terms of Service
            </li>
            <li>
              Contact Us
            </li>
          </ul>
        </div>
      </div>
      <div
        class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400"
      >
        <p>
          © 2024 MeetingMuse. All rights reserved.
        </p>
      </div>
    </div>
  </footer>
</div>
`;
